fixing spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -19,5 +19,5 @@ img {
 }
 
 .rest-rant-pic {
-    max-width: 50%;
+    max-height: 40vh;
 }
